--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Quiz dla Zakochanych</title>
+  <title>Quiz dla Zakochanych - Supabase</title>
   <!-- Romantyczne fonty -->
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -98,29 +98,19 @@
   </style>
 </head>
 <body>
-  <div class="container" id="app"></div>
+  <div class="container" id="app">Ładowanie aplikacji...</div>
 
-  <!-- Skrypt modułowy – integracja Firebase i logika quizu -->
-  <script type="module">
-    // Import Firebase modułów z CDN
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js";
-    import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-firestore.js";
+  <!-- Supabase JS SDK -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+  <script>
+    /*************** Konfiguracja Supabase ***************/
+    // Wklej tutaj dane ze swojego projektu Supabase:
+    const SUPABASE_URL = "https://mdpyylbbhgvtbrpuejet.supabase.co";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1kcHl5bGJiaGd2dGJycHVlamV0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Mzk2MzIxMzIsImV4cCI6MjA1NTIwODEzMn0.31noUOdLve6sKZAA2iTgzKd8nO0Zrz9tel5nbEziMHo";
+    const { createClient } = window.supabase;
+    const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-    // Konfiguracja Firebase (dane z Twojego projektu "Quiz")
-    const firebaseConfig = {
-      apiKey: "AIzaSyDbaPN7PY2JxjbgVc91ZXZpUMkVA2N2OVI",
-      authDomain: "quiz-e666a.firebaseapp.com",
-      projectId: "quiz-e666a",
-      storageBucket: "quiz-e666a.firebasestorage.app",
-      messagingSenderId: "1081615611409",
-      appId: "1:1081615611409:web:096691e17e9d193540e3b0"
-    };
-
-    // Inicjalizacja Firebase i Firestore
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-
-    // Funkcje pomocnicze
+    /*************** Funkcje pomocnicze ***************/
     function getQueryParam(param) {
       const params = new URLSearchParams(window.location.search);
       return params.get(param);
@@ -128,41 +118,45 @@
     function generateToken() {
       return Math.random().toString(36).substr(2, 8);
     }
-    function sessionKey(token) {
-      return 'quizSession_' + token;
-    }
-    // Zapis sesji – zapisujemy do localStorage oraz do Firestore
-    async function saveSession(token, data) {
-      localStorage.setItem(sessionKey(token), JSON.stringify(data));
+    // Zapis sesji do Supabase (upsert do tabeli 'quizzes')
+    async function saveSession(token, sessionData) {
       try {
-        await setDoc(doc(db, "quizzes", token), data, { merge: true });
-        console.log("Sesja zapisana w Firestore");
-      } catch (error) {
-        console.error("Błąd zapisu sesji do Firestore:", error);
-      }
-    }
-    // Odczyt sesji – próbujemy najpierw z localStorage, a jeśli brak, to z Firestore
-    async function loadSession(token) {
-      let data = localStorage.getItem(sessionKey(token));
-      if (data) {
-        return JSON.parse(data);
-      } else {
-        try {
-          const docSnap = await getDoc(doc(db, "quizzes", token));
-          if (docSnap.exists()) {
-            return docSnap.data();
-          }
-        } catch (error) {
-          console.error("Błąd pobierania sesji z Firestore:", error);
+        const { data, error } = await supabase
+          .from('quizzes')
+          .upsert({ token, session_data: sessionData });
+        if (error) {
+          console.error("Błąd przy zapisie do Supabase:", error);
+        } else {
+          console.log("Sesja zapisana w Supabase:", data);
         }
+      } catch (err) {
+        console.error("Błąd przy zapisie sesji:", err);
       }
-      return null;
     }
+    // Odczyt sesji z Supabase
+    async function loadSession(token) {
+      try {
+        const { data, error } = await supabase
+          .from('quizzes')
+          .select('session_data')
+          .eq('token', token)
+          .single();
+        if (error) {
+          console.error("Błąd przy odczycie z Supabase:", error);
+          return null;
+        }
+        return data ? data.session_data : null;
+      } catch (err) {
+        console.error("Błąd loadSession:", err);
+        return null;
+      }
+    }
+    // Zastępujemy placeholdery {p1} i {p2} imionami
     function formatText(text, p1, p2) {
       return text.replace(/{p1}/g, p1).replace(/{p2}/g, p2);
     }
 
-    // Pełna baza pytań – 5 kategorii, każda po 10 pytań (5 porównawczych, 5 tak/nie)
+    /*************** Dane Quizu ***************/
     const fullQuizData = [
       {
         category: "Życie codzienne",
@@ -241,11 +235,9 @@
       }
     ];
 
-    // Koniec danych quizu
-    const appDiv = document.getElementById('app');
-
-    // Krok 1: Formularz tworzenia quizu (Partner 1 wpisuje imiona)
-    function showCreateQuiz() {
+    /*************** Logika quizu ***************/
+    // Funkcja tworząca formularz dla Partnera 1 – tworzenie quizu
+    async function showCreateQuiz() {
       appDiv.innerHTML = `
         <h1>Quiz dla Zakochanych</h1>
         <p>Wprowadź imiona obojga partnerów, aby utworzyć quiz.</p>
@@ -257,112 +249,71 @@
           <button type="submit">Utwórz Quiz</button>
         </form>
       `;
-      document.getElementById('createQuizForm').addEventListener('submit', function(e) {
+      document.getElementById('createQuizForm').addEventListener('submit', async (e) => {
         e.preventDefault();
         const p1 = e.target.partner1Name.value.trim();
         const p2 = e.target.partner2Name.value.trim();
-        if (!p1 || !p2) {
-          alert("Proszę wpisać imiona obu partnerów.");
-          return;
-        }
+        if (!p1 || !p2) return alert("Podaj oba imiona.");
         const token = generateToken();
         const sessionData = {
-          token: token,
+          token,
           partner1Name: p1,
           partner2Name: p2,
-          answers: {}  // Tutaj będziemy zapisywać odpowiedzi
+          answers: {}
         };
-        saveSession(token, sessionData);
-        // Przekierowanie Partnera 1 (dodajemy token i partner=1 w URL)
-        window.location.href = window.location.origin + window.location.pathname + `?token=${token}&partner=1`;
+        await saveSession(token, sessionData);
+        // Przekieruj Partnera 1 do strony quizu
+        window.location.href = `?token=${token}&partner=1`;
       });
     }
 
-    // Krok 2: Wybór kategorii – dostępny tylko dla Partnera 1
-    function showCategorySelection(sessionData) {
-      let categoryOptions = fullQuizData.map(cat => {
-        return `<div>
-                  <label>
-                    <input type="checkbox" name="category" value="${cat.category}" checked>
-                    ${cat.category}
-                  </label>
-                </div>`;
-      }).join("");
-      appDiv.innerHTML = `
-        <h2>Wybierz kategorie quizu</h2>
-        <form id="categoryForm">
-          ${categoryOptions}
-          <button type="submit">Zapisz wybór kategorii</button>
-        </form>
-      `;
-      document.getElementById('categoryForm').addEventListener('submit', function(e) {
-        e.preventDefault();
-        const selected = Array.from(document.querySelectorAll('input[name="category"]:checked')).map(el => el.value);
-        if (selected.length === 0) {
-          alert("Wybierz przynajmniej jedną kategorię.");
-          return;
-        }
-        // Filtrujemy pełne dane quizu na podstawie wybranych kategorii
-        const selectedCategories = fullQuizData.filter(cat => selected.includes(cat.category));
-        sessionData.selectedCategories = selectedCategories;
-        saveSession(sessionData.token, sessionData);
-        showLinkPage(sessionData);
-      });
-    }
-
-    // Krok 3: Strona z linkiem dla Partnera 2 (oraz przyciskiem startu dla Partnera 1)
-    function showLinkPage(sessionData) {
+    // Funkcja wyświetlająca link do quizu dla Partnera 2 oraz przycisk startowy dla Partnera 1
+    async function showQuizLink(sessionData) {
       const baseUrl = window.location.origin + window.location.pathname;
       const partner2Link = `${baseUrl}?token=${sessionData.token}&partner=2`;
       appDiv.innerHTML = `
-        <h2>Quiz Utworzony!</h2>
-        <p>Wyślij ten link swojemu partnerowi, aby mógł wypełnić quiz:</p>
+        <h2>Quiz utworzony!</h2>
+        <p>Wyślij ten link Partnerowi 2:</p>
         <div class="link-box" id="partner2Link">${partner2Link}</div>
         <button id="copyBtn">Kopiuj link</button>
         <hr>
         <p>Jako <strong>${sessionData.partner1Name}</strong> możesz już rozpocząć quiz.</p>
         <button id="startQuizBtn">Rozpocznij quiz</button>
-        <button id="newQuizBtn" style="background: #6c757d;">Utwórz nowy quiz</button>
       `;
-      document.getElementById('copyBtn').addEventListener('click', function() {
+      document.getElementById('copyBtn').addEventListener('click', () => {
         const linkText = document.getElementById('partner2Link').innerText;
-        navigator.clipboard.writeText(linkText).then(function() {
+        navigator.clipboard.writeText(linkText).then(() => {
           alert("Link został skopiowany!");
         });
       });
-      document.getElementById('startQuizBtn').addEventListener('click', function() {
+      document.getElementById('startQuizBtn').addEventListener('click', () => {
         startQuiz(sessionData, "1");
-      });
-      document.getElementById('newQuizBtn').addEventListener('click', function() {
-        localStorage.removeItem(sessionKey(sessionData.token));
-        window.location.href = window.location.origin + window.location.pathname;
       });
     }
 
-    // Krok 4: Rozpoczęcie quizu – budujemy liniową tablicę pytań z wybranych kategorii
-    // i zapisujemy ją w sesji
-    function startQuiz(sessionData, partner) {
+    // Funkcja rozpoczynająca quiz – buduje listę pytań z wybranych kategorii i przechodzi do pytań
+    async function startQuiz(sessionData, partner) {
       let quizQuestions = [];
-      sessionData.selectedCategories.forEach(cat => {
+      // Dla uproszczenia, używamy wszystkich kategorii – możesz dodać logikę wyboru
+      fullQuizData.forEach(cat => {
         cat.questions.forEach(q => {
-          // Dodajemy informację o kategorii do pytania
           quizQuestions.push({ ...q, category: cat.category });
         });
       });
       // Zapisujemy stałą kolejność pytań w sesji
       sessionData.quizQuestions = quizQuestions;
-      // Inicjalizujemy odpowiedzi dla danego partnera jako obiekt (klucz: id pytania)
+      // Inicjalizujemy odpowiedzi dla danego partnera jako obiekt
       if (!sessionData.answers["partner" + partner]) {
         sessionData.answers["partner" + partner] = {};
       }
-      saveSession(sessionData.token, sessionData);
+      await saveSession(sessionData.token, sessionData);
       showQuestion(0, quizQuestions, sessionData, partner);
     }
 
-    // Krok 5: Wyświetlanie pojedynczego pytania (z postępem i kafelkami odpowiedzi)
-    function showQuestion(index, quizQuestions, sessionData, partner) {
+    // Funkcja wyświetlająca pojedyncze pytanie
+    async function showQuestion(index, quizQuestions, sessionData, partner) {
       if (index >= quizQuestions.length) {
-        saveSession(sessionData.token, sessionData);
+        await saveSession(sessionData.token, sessionData);
         showQuizResults(sessionData);
         return;
       }
@@ -390,28 +341,27 @@
           ${optionsHTML}
         </div>
       `;
-      const tiles = document.querySelectorAll('.tile');
-      tiles.forEach(tile => {
-        tile.addEventListener('click', function() {
+      document.querySelectorAll('.tile').forEach(tile => {
+        tile.addEventListener('click', async function() {
           const answer = this.getAttribute('data-answer');
-          // Zapisujemy odpowiedź w obiekcie, kluczujemy po id pytania
+          // Zapisujemy odpowiedź, kluczując ją po id pytania
           sessionData.answers["partner" + partner][current.id] = {
             category: current.category,
             type: current.type,
             answer: answer
           };
-          saveSession(sessionData.token, sessionData);
+          await saveSession(sessionData.token, sessionData);
           showQuestion(index + 1, quizQuestions, sessionData, partner);
         });
       });
     }
 
-    // Krok 6: Wyświetlenie wyników quizu – porównujemy odpowiedzi na podstawie quizQuestions
-    function showQuizResults(sessionData) {
+    // Funkcja wyświetlająca wyniki quizu – porównanie odpowiedzi obu partnerów
+    async function showQuizResults(sessionData) {
       const quizQuestions = sessionData.quizQuestions;
       const answers1 = sessionData.answers.partner1;
       const answers2 = sessionData.answers.partner2;
-      // Sprawdzamy, czy odpowiedzi są kompletne
+      // Jeśli odpowiedzi nie są kompletne, czekamy
       if (!answers1 || !answers2 || Object.keys(answers1).length !== quizQuestions.length || Object.keys(answers2).length !== quizQuestions.length) {
         appDiv.innerHTML = `<p>Oczekiwanie na zakończenie quizu przez oboje partnerów.</p>`;
         return;
@@ -446,43 +396,34 @@
         <ul>${categoryResults}</ul>
         <button id="resetBtn">Resetuj Quiz</button>
       `;
-      document.getElementById('resetBtn').addEventListener('click', function() {
-        localStorage.removeItem(sessionKey(sessionData.token));
+      document.getElementById('resetBtn').addEventListener('click', async () => {
+        // Usuwamy sesję z Supabase – w tym przykładzie po prostu przekierowujemy do strony głównej
         window.location.href = window.location.origin + window.location.pathname;
       });
     }
 
-    // Główna logika – w zależności od parametrów URL:
-    // * Jeśli brak tokenu – wyświetl formularz tworzenia quizu (Partner 1)
-    // * Jeśli token istnieje:
-    //   - Dla partner=1: jeśli jeszcze nie wybrano kategorii – pokaż wybór, w przeciwnym razie stronę z linkiem i opcją startu quizu.
-    //   - Dla partner=2: uruchom quiz
-    (async function() {
+    /*************** Główna logika ***************/
+    (async function main() {
       const token = getQueryParam('token');
       const partner = getQueryParam('partner');
-      if (token) {
+      if (!token) {
+        // Brak tokenu – tworzymy nowy quiz (Partner 1)
+        showCreateQuiz();
+      } else {
         const sessionData = await loadSession(token);
         if (!sessionData) {
-          appDiv.innerHTML = `<p>Błąd: Nie znaleziono sesji quizu. Upewnij się, że link jest poprawny.</p>`;
+          appDiv.innerHTML = "<p>Błąd: Nie znaleziono quizu w bazie. Sprawdź link.</p>";
           return;
         }
         if (partner === "1") {
-          if (!sessionData.selectedCategories) {
-            showCategorySelection(sessionData);
-          } else {
-            showLinkPage(sessionData);
-          }
+          // Partner 1 – wyświetlamy link do quizu dla Partnera 2
+          showQuizLink(sessionData);
         } else if (partner === "2") {
-          if (!sessionData.selectedCategories) {
-            appDiv.innerHTML = `<p>Quiz nie został jeszcze skonfigurowany przez Partnera 1.</p>`;
-            return;
-          }
+          // Partner 2 – rozpoczynamy quiz
           startQuiz(sessionData, "2");
         } else {
-          appDiv.innerHTML = `<p>Błąd: Nieznany partner.</p>`;
+          appDiv.innerHTML = "<p>Błąd: Nieprawidłowy parametr partner.</p>";
         }
-      } else {
-        showCreateQuiz();
       }
     })();
   </script>
