--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Quiz dla Zakochanych - Supabase</title>
-  <link rel="stylesheet" href="style.css">
-  <!-- Romantyczne fonty -->
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Quiz dla Zakochanych</title>
+  <!-- Podstawowe style -->
+  <link rel="stylesheet" href="style.css" />
+  <!-- Fonty romantyczne -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat:wght@400;700&display=swap"
+    rel="stylesheet"
+  />
 </head>
 <body>
   <div class="container" id="app">Ładowanie aplikacji...</div>
-  <!-- Supabase JS SDK -->
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
-<script src="script.js"></script>
 
+  <!-- Supabase SDK -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+  <!-- Główny skrypt z logiką quizu -->
+  <script src="script.js"></script>
 </body>
 </html>
