--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
   <!-- Supabase SDK -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+  <!-- Plik z definicją fullQuizData -->
+  <script src="quizData.js"></script>
   <!-- Główny skrypt z logiką quizu -->
   <script src="script.js"></script>
 </body>
