--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Supabase SDK -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
   <!-- Plik z definicją fullQuizData -->
-  <script src="quizData.js"></script>
+  <script src="quizDATA.js"></script>
   <!-- Główny skrypt z logiką quizu -->
   <script src="script.js"></script>
 </body>
